# ium

./: .gitignore  project_paths.py  pyproject.toml  requirements.txt
analysis/: booking_builder.py  build_text.py  calc_join_coverage.py  features.py  get_amen_col_names.py  get_attribute_data.py  get_attribute_values.py  get_histograms.py  parse_amenities_cell.py  preprocess.py  repair_sessions.py  statistics.py  train_and_save_models.py  train_baseline.py  tune.py
docs/: data_analysis.md  final.md  intro.md  sprawozdanie.tex  test_ab.ipynb
micoservice/: app.py  eval_ab.py
models/: regression.joblib  xgboost.joblib
notebooks/: final.ipynb  raport.ipynb  test_ab.ipynb
requests/: request_01_long.json  request_02_long.json  request_03_long.json  request_04_short.json  request_05_short.json  request_06_short.json
src/: prepare_data.py
src/analysis_tools/: find_cancellations.py  get_attribute_data.py  get_attribute_values.py  histograms.py  join_coverage.py  repair_listings_id.py  statistics.py
src/data_processing/: __init__.py  bookings.py  features.py  text.py
src/microservice/: app.py  eval_ab.py  generate_logs.py
src/modeling/: extract_features.py  train_and_save_models.py  train_baseline.py  tune.py
src/utils/: constants.py  models.py  pandas.py
