[project]
name = "ium"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.123.8",
    "hdbscan>=0.8.41",
    "joblib>=1.5.2",
    "matplotlib>=3.10.7",
    "missingno>=0.5.2",
    "numpy>=2.3.5",
    "optuna>=4.6.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.2.0",
    "uvicorn>=0.40.0",
    "xgboost==3.0.0",
    "ipykernel>=7.1.0",
    "sklearn-utils>=0.0.15",
    "shap>=0.49.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.4.0",
    "pyright>=1.1.408",
    "pytest>=9.0.0",
    "ruff>=0.14.4",
]

[tool.ruff]
line-length = 120
indent-width = 4
fix = true
show-fixes = true
src = ["src"]
exclude = ["src/**/test_*.py", "tests"]
ignore = ["PLR2004", "S311"]

[tool.ruff.lint]
extend-select = ["I", "E", "W", "F", "C90", "B", "S", "UP", "PL"]
